--- a/notebooks/models_realisation.ipynb
+++ b/notebooks/models_realisation.ipynb
@@ -351,31 +351,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import polars as pl\n",
-    "from sklearn.metrics import confusion_matrix, accuracy_score, mean_absolute_error"
+    "from sklearn.metrics import confusion_matrix, accuracy_score, mean_absolute_error, r2_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pl.read_csv(\"C:/Users/guill/OneDrive - Université de Tours/Bureau/M2/Wine-Scraping/data/tables/pred_classification.csv\")"
+    "df = pl.read_csv(\"C:/Users/guill/OneDrive - Université de Tours/Bureau/M2/Wine-Scraping/data/tables/pred_regression.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_true = df.select(\"type\")\n",
+    "y_true = df.select(\"unit_price\")\n",
     "y_pred = df.select(\"boosting\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (1, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>unit_price</th><th>mlp</th></tr><tr><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>819.0</td><td>445.341045</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (1, 2)\n",
+       "┌────────────┬────────────┐\n",
+       "│ unit_price ┆ mlp        │\n",
+       "│ ---        ┆ ---        │\n",
+       "│ f64        ┆ f64        │\n",
+       "╞════════════╪════════════╡\n",
+       "│ 819.0      ┆ 445.341045 │\n",
+       "└────────────┴────────────┘"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select(pl.max(\"unit_price\", \"mlp\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4650701990013849"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(y_true,y_pred)"
    ]
   },
   {
