Checks `mypy` et documentation plus poussée de certaines fonctions, mise à jour de streamlit sur poetry.

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,11 @@
 préciser la licence du projet
 faire un readme digne de ce nom
 axe d'amélioration => spacy et NLP
+how to streamlit test ?
+
+MYPY passing :
+
+- st_functions
+- st_plots
+- st_tables
+- bear_cleaner
