--- a/test_models.ipynb
+++ b/test_models.ipynb
@@ -194,6 +194,37 @@
    "source": [
     "_recup_param(\"Boosting\", \"unit_price\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.modules.app.st_selectors import n_variable_selector\n",
+    "from src.modules.app.st_functions import load_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = load_df()\n",
+    "n_variable_selector()"
+   ]
   }
  ],
  "metadata": {
@@ -212,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
