--- a/test_models.ipynb
+++ b/test_models.ipynb
@@ -197,33 +197,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.modules.app.st_selectors import n_variable_selector\n",
-    "from src.modules.app.st_functions import load_df"
+    "from src.modules.app.st_functions import load_df, db_connector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<duckdb.duckdb.DuckDBPyConnection object at 0x00000165478A1D30>\n"
+     ]
     }
    ],
    "source": [
     "df = load_df()\n",
-    "n_variable_selector()"
+    "print(db_connector())"
    ]
   }
  ],
